--- a/about.html
+++ b/about.html
@@ -119,8 +119,10 @@
               <div class="post-meta mt-4">About us</div>
               <h2 class="mb-4 display-4">Company History</h2>
 
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, perspiciatis repellat maxime, adipisci non ipsam at itaque rerum vitae, necessitatibus nulla animi expedita cumque provident inventore? Voluptatum in tempora earum deleniti, culpa odit veniam, ea reiciendis sunt ullam temporibus aut!</p>
-              <p>Fugit eaque illum blanditiis, quo exercitationem maiores autem laudantium unde excepturi dolores quasi eos vero harum ipsa quam laborum illo aut facere voluptates aliquam adipisci sapiente beatae ullam. Tempora culpa iusto illum accusantium cum hic quisquam dolor placeat officiis eligendi.</p>
+              <p>We started as a small team of experienced engineers, developers, and entrepreneurs in 2017. Our goal was to develop a platform that would allow businesses and individuals to securely store and manage data on the blockchain. We believed that this technology would give users more control and privacy when it comes to sharing and exchanging information.</p>
+                
+              <p>We are a leading provider of innovative blockchain solutions that are designed to revolutionize the way businesses and individuals interact with data. Our mission is to create solutions that are secure, transparent, and reliable for our customers.</p>
+
             </div>
           </div>
 
@@ -132,8 +134,8 @@
               <div class="post-meta mt-4">Mission &amp; Vision</div>
               <h2 class="mb-4 display-4">Mission &amp; Vision</h2>
 
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, perspiciatis repellat maxime, adipisci non ipsam at itaque rerum vitae, necessitatibus nulla animi expedita cumque provident inventore? Voluptatum in tempora earum deleniti, culpa odit veniam, ea reiciendis sunt ullam temporibus aut!</p>
-              <p>Fugit eaque illum blanditiis, quo exercitationem maiores autem laudantium unde excepturi dolores quasi eos vero harum ipsa quam laborum illo aut facere voluptates aliquam adipisci sapiente beatae ullam. Tempora culpa iusto illum accusantium cum hic quisquam dolor placeat officiis eligendi.</p>
+              <p>Over the past few years, we have made tremendous progress in our mission. We have expanded our team, created enterprise-level applications, and built out our infrastructure. We are now a global leader in blockchain-based solutions and have customers from all over the world.</p>
+              <p>At our company, we are committed to creating a better future for everyone. We believe that our technology can help make the world a safer, fairer, and more transparent place. We are proud to be part of the blockchain revolution and look forward to continuing to provide our customers with the best products and services available.</p>
             </div>
           </div>
 
@@ -147,9 +149,9 @@
         <div class="row justify-content-between align-items-lg-center">
           <div class="col-lg-5 mb-4 mb-lg-0">
             <h2 class="display-4 mb-4">Latest News</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, rem eaque vel est asperiores iste pariatur placeat molestias, rerum provident ea maiores debitis eum earum esse quas architecto! Minima, voluptatum! Minus tempora distinctio quo sint est blanditiis voluptate eos. Commodi dolore nesciunt culpa adipisci nemo expedita suscipit autem dolorum rerum?</p>
-            <p>At magni dolore ullam odio sapiente ipsam, numquam eius minus animi inventore alias quam fugit corrupti error iste laboriosam dolorum culpa doloremque eligendi repellat iusto vel impedit odit cum. Sequi atque molestias nesciunt rem eum pariatur quibusdam deleniti saepe eius maiores porro quam, praesentium ipsa deserunt laboriosam adipisci. Optio, animi!</p>
-            <p><a href="#" class="more">View All Blog Posts</a></p>
+            <p>Blockchain technology continues to make headlines as more and more companies and governments explore its potential. Recent news includes the launch of Facebook's Libra cryptocurrency, the announcement of Microsoft's new blockchain-based platform, and the introduction of a new UK-based blockchain regulatory body. Additionally, blockchain is being used in the retail industry to increase efficiency and reduce costs, and to enhance security and privacy in the healthcare industry.</p>
+            <p>Blockchain technology has been making headlines lately as its potential to revolutionize how we store, track, and transact data continues to be explored. One of the latest news stories to emerge is the announcement of a partnership between blockchain technology provider Blockstream and the city of Taipei, Taiwan. The two will be working together to explore and implement blockchain-based solutions in the city's government services. The project will focus on using blockchain technology to create a secure and efficient digital infrastructure for the city and its citizens. In addition, the project aims to create an ecosystem for smart contracts, digital asset management, and personal data management. This partnership is an exciting development for the blockchain industry, and could help usher in a new era of blockchain-based services.</p>
+            <p><a href="blog.html" class="more">View All Blog Posts</a></p>
           </div>
           <div class="col-lg-6">
             <div class="row">
@@ -172,7 +174,7 @@
             <div class="row justify-content-center">
               <div class="col-lg-6">
                 <h2 class="display-4">Our Team</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil sint sed, fugit distinctio ad eius itaque deserunt doloribus harum excepturi laudantium sit officiis et eaque blanditiis. Dolore natus excepturi recusandae.</p>
+                <p>We are a diverse, talented, and passionate group of professionals who are dedicated to providing exceptional service to our customers. We strive to create innovative solutions to help our customers achieve their goals. Our team is comprised of individuals from a variety of backgrounds who bring unique perspectives and skillsets to the table. We value collaboration, creativity, and learning, and look forward to working with you to reach success.</p>
               </div>
             </div>
           </div>
@@ -180,37 +182,37 @@
             <img src="assets/img/person-1.jpg" alt="" class="img-fluid rounded-circle w-50 mb-4">
             <h4>Cameron Williamson</h4>
             <span class="d-block mb-3 text-uppercase">Founder &amp; CEO</span>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, perspiciatis repellat maxime, adipisci non ipsam at itaque rerum vitae, necessitatibus nulla animi expedita cumque provident inventore? Voluptatum in tempora earum deleniti, culpa odit veniam, ea reiciendis sunt ullam temporibus aut!</p>
+            <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, perspiciatis repellat maxime, adipisci non ipsam at itaque rerum vitae, necessitatibus nulla animi expedita cumque provident inventore? Voluptatum in tempora earum deleniti, culpa odit veniam, ea reiciendis sunt ullam temporibus aut!</p> -->
           </div>
           <div class="col-lg-4 text-center mb-5">
             <img src="assets/img/profile_stephen_hodgkiss.jpg" alt="" class="img-fluid rounded-circle w-50 mb-4">
             <h4>Stephen Hodgkiss</h4>
             <span class="d-block mb-3 text-uppercase">Founder, VP</span>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, perspiciatis repellat maxime, adipisci non ipsam at itaque rerum vitae, necessitatibus nulla animi expedita cumque provident inventore? Voluptatum in tempora earum deleniti, culpa odit veniam, ea reiciendis sunt ullam temporibus aut!</p>
+            <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, perspiciatis repellat maxime, adipisci non ipsam at itaque rerum vitae, necessitatibus nulla animi expedita cumque provident inventore? Voluptatum in tempora earum deleniti, culpa odit veniam, ea reiciendis sunt ullam temporibus aut!</p> -->
           </div>
           <div class="col-lg-4 text-center mb-5">
             <img src="assets/img/person-3.jpg" alt="" class="img-fluid rounded-circle w-50 mb-4">
             <h4>Jane Cooper</h4>
             <span class="d-block mb-3 text-uppercase">Editor Staff</span>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, perspiciatis repellat maxime, adipisci non ipsam at itaque rerum vitae, necessitatibus nulla animi expedita cumque provident inventore? Voluptatum in tempora earum deleniti, culpa odit veniam, ea reiciendis sunt ullam temporibus aut!</p>
+            <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, perspiciatis repellat maxime, adipisci non ipsam at itaque rerum vitae, necessitatibus nulla animi expedita cumque provident inventore? Voluptatum in tempora earum deleniti, culpa odit veniam, ea reiciendis sunt ullam temporibus aut!</p> -->
           </div>
           <div class="col-lg-4 text-center mb-5">
             <img src="assets/img/profile_stephen_hodgkiss.jpg" alt="" class="img-fluid rounded-circle w-50 mb-4">
-            <h4>Cameron Williamson</h4>
-            <span class="d-block mb-3 text-uppercase">Editor Staff</span>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, perspiciatis repellat maxime, adipisci non ipsam at itaque rerum vitae, necessitatibus nulla animi expedita cumque provident inventore? Voluptatum in tempora earum deleniti, culpa odit veniam, ea reiciendis sunt ullam temporibus aut!</p>
+            <h4>Stephen Hodgkiss</h4>
+            <span class="d-block mb-3 text-uppercase">Chief Editor</span>
+            <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, perspiciatis repellat maxime, adipisci non ipsam at itaque rerum vitae, necessitatibus nulla animi expedita cumque provident inventore? Voluptatum in tempora earum deleniti, culpa odit veniam, ea reiciendis sunt ullam temporibus aut!</p> -->
           </div>
           <div class="col-lg-4 text-center mb-5">
             <img src="assets/img/person-5.jpg" alt="" class="img-fluid rounded-circle w-50 mb-4">
-            <h4>Cameron Williamson</h4>
+            <h4>Michelle Ying</h4>
             <span class="d-block mb-3 text-uppercase">Editor Staff</span>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, perspiciatis repellat maxime, adipisci non ipsam at itaque rerum vitae, necessitatibus nulla animi expedita cumque provident inventore? Voluptatum in tempora earum deleniti, culpa odit veniam, ea reiciendis sunt ullam temporibus aut!</p>
+            <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, perspiciatis repellat maxime, adipisci non ipsam at itaque rerum vitae, necessitatibus nulla animi expedita cumque provident inventore? Voluptatum in tempora earum deleniti, culpa odit veniam, ea reiciendis sunt ullam temporibus aut!</p> -->
           </div>
           <div class="col-lg-4 text-center mb-5">
             <img src="assets/img/person-6.jpg" alt="" class="img-fluid rounded-circle w-50 mb-4">
-            <h4>Cameron Williamson</h4>
+            <h4>Mona Nielson</h4>
             <span class="d-block mb-3 text-uppercase">Editor Staff</span>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, perspiciatis repellat maxime, adipisci non ipsam at itaque rerum vitae, necessitatibus nulla animi expedita cumque provident inventore? Voluptatum in tempora earum deleniti, culpa odit veniam, ea reiciendis sunt ullam temporibus aut!</p>
+            <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, perspiciatis repellat maxime, adipisci non ipsam at itaque rerum vitae, necessitatibus nulla animi expedita cumque provident inventore? Voluptatum in tempora earum deleniti, culpa odit veniam, ea reiciendis sunt ullam temporibus aut!</p> -->
           </div>
         </div>
       </div>
@@ -225,7 +227,7 @@
         <div class="row g-5">
           <div class="col-lg-4">
             <h3 class="footer-heading">About Stephen Hodgkiss</h3>
-            <p>I'm Stephen Hodgkiss. I'm a web developer living in-between the United Kingdom and S.E. Asia. I am a fan of technology, travel and food. I'm also interested in programming and web development. You can read my articles with a click on the button above.</p>
+            <p>I'm Stephen Hodgkiss. I'm a web developer living in-between the United Kingdom and S.E. Asia. I am a fan of technology, travel and food. I'm also interested in programming and web development.</p>
             <p>Born in the UK, after finishing school I graduated from Technical College with a HND (Higher National Diploma). After working my way up as an Employee of various companies, I went Freelance in 1987. Working both in the UK and locations worldwide, I soon built up my reputation as a very competent developer, being retained by one particular Bank for 15 years.</p>
             <p>The last few years I've developed more experience that relates to Blockchain Technology and the way it can empower governments, businesses and customers. This includes the development of blockchain platforms and Cryptocurrency exchanges.</p>
             <p><a href="about.html" class="footer-link-more">Learn More</a></p>
