--- a/single-post.html
+++ b/single-post.html
@@ -424,7 +424,7 @@
         <div class="row g-5">
           <div class="col-lg-4">
             <h3 class="footer-heading">About Stephen Hodgkiss</h3>
-            <p>I'm Stephen Hodgkiss. I'm a web developer living in-between the United Kingdom and S.E. Asia. I am a fan of technology, travel and food. I'm also interested in programming and web development. You can read my articles with a click on the button above.</p>
+            <p>I'm Stephen Hodgkiss. I'm a web developer living in-between the United Kingdom and S.E. Asia. I am a fan of technology, travel and food. I'm also interested in programming and web development.</p>
             <p>Born in the UK, after finishing school I graduated from Technical College with a HND (Higher National Diploma). After working my way up as an Employee of various companies, I went Freelance in 1987. Working both in the UK and locations worldwide, I soon built up my reputation as a very competent developer, being retained by one particular Bank for 15 years.</p>
             <p>The last few years I've developed more experience that relates to Blockchain Technology and the way it can empower governments, businesses and customers. This includes the development of blockchain platforms and Cryptocurrency exchanges.</p>
             <p><a href="about.html" class="footer-link-more">Learn More</a></p>
