--- a/about.html
+++ b/about.html
@@ -51,6 +51,7 @@
       <nav id="navbar" class="navbar">
         <ul>
            <!--<li><a href="">Blog</a></li>-->
+          <li><a href="/">Home</a></li>
           <li><a href="blog.html">Blog</a></li>
           <!-- <li class="dropdown"><a href="category.html"><span>Categories</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
