--- a/Exploring-the-Power-of-Blockchain.html
+++ b/Exploring-the-Power-of-Blockchain.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-<title>"Exploring the Power of Blockchain"</title>
-<meta property="og:title" content="Exploring the Power of Blockchain">
+<title>"All About Blockchain | Exploring the Power of Blockchain"</title>
+<meta property="og:title" content="All About Blockchain | Exploring the Power of Blockchain">
 <meta content="Born in the UK, after finishing school Stephen Hodgkiss graduated from Technical College with a HND (Higher National Diploma). After working his way up as an Employee of various companies, he went Freelance in 1987. Working both in the UK and locations worldwide, Stephen Hodgkiss soon built up his reputation as a very competent developer, being retained by one particular Bank for 15 years. The last few years Stephen Hodgkiss developed more experience that relates to Blockchain Technology and the way it can empower governments, businesses and customers. This includes the development of blockchain platforms and Cryptocurrency exchanges." property="og:description">
 <meta content="Stephen,Hodgkiss,Blockchain,Developer" property="og:keywords">
 
@@ -102,7 +102,7 @@
 
   </header><!-- End Header -->
     <main id="main">
-        <section class="single-post-content">
+                <section class="single-post-content">
   <div class="container">
     <div class="row">
       <div class="col-md-9 post-content" data-aos="fade-in">
@@ -324,6 +324,7 @@ Overall, blockchain technology is an incredibly powerful tool that has the poten
     </div>
   </div>
 </section>
+
     </main>
       <!-- ======= Footer ======= -->
   <footer id="footer" class="footer">
@@ -355,12 +356,10 @@ Overall, blockchain technology is an incredibly powerful tool that has the poten
             <ul class="footer-links list-unstyled">
               <li><a href="category.html"><i class="bi bi-chevron-right"></i> Business</a></li>
               <li><a href="category.html"><i class="bi bi-chevron-right"></i> Culture</a></li>
-              <li><a href="category.html"><i class="bi bi-chevron-right"></i> Sport</a></li>
-              <li><a href="category.html"><i class="bi bi-chevron-right"></i> Food</a></li>
-              <li><a href="category.html"><i class="bi bi-chevron-right"></i> Politics</a></li>
-              <li><a href="category.html"><i class="bi bi-chevron-right"></i> Celebrity</a></li>
+              <li><a href="category.html"><i class="bi bi-chevron-right"></i> Blockchain</a></li>
+              <li><a href="category.html"><i class="bi bi-chevron-right"></i> Digital Art</a></li>
+              <li><a href="category.html"><i class="bi bi-chevron-right"></i> Technology</a></li>
               <li><a href="category.html"><i class="bi bi-chevron-right"></i> Startups</a></li>
-              <li><a href="category.html"><i class="bi bi-chevron-right"></i> Travel</a></li>
 
             </ul>
           </div>
