--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@
   </div>
 </section>
 <!-- End Hero Slider Section -->
-<!-- <h1 class="text-center" style="padding:20px">Coming Soon - Apologies this is a new site and not complete yet.</h1>
-<h1 class="text-center" style="padding:20px">With Christmas and the New Year, I am still managing to get some work done.</h1>  -->
+<h1 class="text-center" style="padding:20px">Coming Soon - Apologies this is a new site and not complete yet.</h1>
+<!-- <h1 class="text-center" style="padding:20px">With Christmas and the New Year, I am still managing to get some work done.</h1>  -->
 <!-- ======= Post Grid Section ======= -->
 <section id="posts" class="posts">
   <div class="container" data-aos="fade-up">
