--- a/Stellar-Liquidity-For-A-New-Token.html
+++ b/Stellar-Liquidity-For-A-New-Token.html
@@ -182,7 +182,7 @@ In conclusion, the Stellar Network is an ideal platform for launching a new toke
           </div>
         </div>
 
-        <div class="aside-block">
+        <!-- <div class="aside-block">
           <h3 class="aside-title">Video</h3>
           <div class="video-post">
             <a href="https://www.youtube.com/watch?v=AiFfDjmd0jU" class="glightbox link-video">
@@ -190,7 +190,8 @@ In conclusion, the Stellar Network is an ideal platform for launching a new toke
               <img src="assets/img/post-landscape-5.jpg" alt="" class="img-fluid">
             </a>
           </div>
-        </div><!-- End Video -->
+        </div> -->
+        <!-- End Video -->
 
         <div class="aside-block">
           <h3 class="aside-title">Categories</h3>
