--- a/blog.html
+++ b/blog.html
@@ -294,7 +294,7 @@
               </div>
             </div>
 
-            <div class="aside-block">
+            <!-- <div class="aside-block">
               <h3 class="aside-title">Video</h3>
               <div class="video-post">
                 <a href="https://www.youtube.com/watch?v=AiFfDjmd0jU" class="glightbox link-video">
@@ -302,7 +302,8 @@
                   <img src="assets/img/post-landscape-5.jpg" alt="" class="img-fluid">
                 </a>
               </div>
-            </div><!-- End Video -->
+            </div> -->
+            <!-- End Video -->
 
             <div class="aside-block">
               <h3 class="aside-title">Categories</h3>
